# fez-keyboard-translator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  pages.yml
assets/: CMakeLists.txt  iconset.rgi
libs/: CMakeLists.txt
src/: CMakeLists.txt  iconset.rgi.h  main.cpp  shell_minimal.html
